added persons view and logic

--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -17,7 +17,8 @@
 
         <br>
 
-        <div class="flex-item"> <button class="buttonWarning" (click)="routeTo('/createUser')">Benutzer erstellen</button>
+        <div class="flex-item"> <button class="buttonWarning" (click)="routeTo('/createUser')">Benutzer
+                erstellen</button>
         </div>
     </div>
 </div>
