--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -3,10 +3,10 @@
         <div class="flex-item" id="top-text"> <span>Login</span> </div>
 
         <div class="flex-item"> <label for="userName">Benutzername</label> </div>
-        <div class="flex-item"> <input type="text" id="userName" [(ngModel)]="userData.userName"> </div>
+        <div class="flex-item"> <input type="text" id="userName" [(ngModel)]="loginData.userName"> </div>
 
         <div class="flex-item"> <label for="passWord">Passwort</label> </div>
-        <div class="flex-item"> <input type="password" id="passWord" [(ngModel)]="userData.passWord"> </div>
+        <div class="flex-item"> <input type="password" id="passWord" [(ngModel)]="loginData.passWord"> </div>
 
         <br>
         <br>
