--- a/src/styles.scss
+++ b/src/styles.scss
@@ -55,6 +55,7 @@ body {
     background-color: $primary-100;
     font-family: Arial, sans-serif;
     overflow: hidden;
+    margin: 0;
 }
 
 input {
