--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="background">
     <div class="login-wrapper" (keydown.enter)="prepareLogin()">
-        <div class="flex-item" id="top-text"> <span>Login</span> </div>
+        <div class="flex-item" id="top-text"> <span>Anmeldung</span> </div>
 
         <div class="flex-item"> <label for="userName">Benutzername</label> </div>
         <div class="flex-item"> <input type="text" id="userName" [(ngModel)]="loginData.userName"> </div>
@@ -11,14 +11,8 @@
         <br>
         <br>
 
-        <div class="flex-item"> <button class="buttonPrimary" (click)="prepareLogin()">Anmelden</button> </div>
-        <div class="flex-item"> <button class="buttonInfo" (click)="prepareLogin(true)">Als Gast Anmelden</button>
-        </div>
+        <div class="flex-itemHalf actionButtons"> <button class="loginAsGuestButton" (click)="prepareLogin(true)">Gast Anmeldung</button> </div>
+        <div class="flex-itemHalf actionButtons"> <button class="loginButton" (click)="prepareLogin()">Anmelden</button> </div>
 
-        <br>
-
-        <div class="flex-item"> <button class="buttonWarning" (click)="routeTo('/createUser')">Benutzer
-                erstellen</button>
-        </div>
     </div>
 </div>
