--- a/src/app/views/login/login.component.scss
+++ b/src/app/views/login/login.component.scss
@@ -3,27 +3,24 @@
 .background {
     position: fixed;
     left: 0;
-    top: 0;
+    top: 70px;
 
-    width: 100%;
-    height: 100%;
+    height: calc(100vh - 70px);
+    width: 100vw;
 
     display: flex;
     justify-content: center;
     align-items: center;
 
-    background: #afaa96;
+    background: #4d5559;
 }
 
 .login-wrapper {
-    padding: 15px;
-    background-color: rgb(243, 243, 243);
-    height: 400px;
+    padding: 40px;
+    background-color: #636e74;
     width: 350px;
 
-    box-shadow: 0 0 10px rgb(100, 100, 100);
-
-    border-radius: 5px;
+    border-radius: 3px;
 
     display: flex;
     justify-content: center;
@@ -46,6 +43,11 @@
 
 #top-text {
     text-align: center;
+    margin-bottom: 25px;
+}
+
+.actionButtons {
+    margin-top: 35px;
 }
 
 .flex-item > span {
@@ -71,29 +73,38 @@ label {
     font-size: 19pt;
 }
 
-button, a {
-    height: 100%;
-    width: 80%;
-    margin-left: 50%;
-    transform: translate(-50%, 0);
-}
-
-button:focus, a:focus {
-    outline: none;
-}
-
-a {
-    text-decoration: none;
+button {
+    height: 50px;
+    width: 165px;
+    font-size: 20px;
+    border-radius: 3px;
     color: black;
-    cursor: default;
-    
+    border: none;
+    box-shadow: none;
+    transition: box-shadow 0.5s, background-color 0.5s, color 0.5s;
 }
 
-.linkAsButton {
-    display: block;
-    padding: 10px;
-    text-align: center;
-    color: white;
-    font-weight: bold;
-    line-height: 25px;
+button:hover {
+    transition: box-shadow 0.5s, background-color 0.5s, color 0.1s;
+}
+
+button.active {
+    transition: box-shadow 0.5s, background-color 0.5s, color 0.1s;
+}
+
+.loginButton {
+    background-color: hsl(170, 71%, 70%);
+}
+
+.loginButton:hover {
+    background-color: hsl(170, 34%, 53%);
+    box-shadow: -0px -0px 50px rgb(118, 255, 232) inset;
+}
+
+.loginAsGuestButton {
+    background-color: hsl(0, 0%, 73%);
+}
+.loginAsGuestButton:hover {
+    background-color: hsl(0, 0%, 62%);
+    box-shadow: -0px -0px 50px hsl(0, 0%, 83%) inset;
 }
