--- a/src/app/views/create-user/create-user.component.scss
+++ b/src/app/views/create-user/create-user.component.scss
@@ -3,27 +3,24 @@
 .background {
     position: fixed;
     left: 0;
-    top: 0;
+    top: 70px;
 
-    width: 100%;
-    height: 100%;
+    height: calc(100vh - 70px);
+    width: 100vw;
 
     display: flex;
     justify-content: center;
     align-items: center;
 
-    background: #afaa96;
+    background: #4d5559;
 }
 
 .login-wrapper {
-    padding: 15px;
-    background-color: rgb(243, 243, 243);
-    height: 400px;
+    padding: 40px;
+    background-color: #636e74;
     width: 350px;
 
-    box-shadow: 0 0 10px rgb(100, 100, 100);
-
-    border-radius: 5px;
+    border-radius: 3px;
 
     display: flex;
     justify-content: center;
@@ -33,7 +30,6 @@
 
 .flex-item {
     width: 100%;
-    height: 40px;
     margin-bottom: 10px;
 }
 
@@ -46,6 +42,11 @@
 
 #top-text {
     text-align: center;
+    margin-bottom: 25px;
+}
+
+.actionButtons {
+    margin-top: 35px;
 }
 
 .flex-item > span {
@@ -72,18 +73,37 @@ label {
 }
 
 button {
-    height: 100%;
-    width: 80%;
-    margin-left: 50%;
-    transform: translate(-50%, 0);
-}
-
-button:focus {
-    outline: none;
-}
-
-a {
-    text-decoration: none;
+    height: 50px;
+    width: 165px;
+    font-size: 20px;
+    border-radius: 3px;
     color: black;
-    cursor: default;
+    border: none;
+    box-shadow: none;
+    transition: box-shadow 0.5s, background-color 0.5s, color 0.5s;
+}
+
+button:hover {
+    transition: box-shadow 0.5s, background-color 0.5s, color 0.1s;
+}
+
+button.active {
+    transition: box-shadow 0.5s, background-color 0.5s, color 0.1s;
+}
+
+.createAccountButton {
+    background-color: hsl(170, 71%, 70%);
+}
+
+.createAccountButton:hover {
+    background-color: hsl(170, 34%, 53%);
+    box-shadow: -0px -0px 50px rgb(118, 255, 232) inset;
+}
+
+.cancelButton {
+    background-color: hsl(0, 0%, 73%);
+}
+.cancelButton:hover {
+    background-color: hsl(0, 0%, 62%);
+    box-shadow: -0px -0px 50px hsl(0, 0%, 83%) inset;
 }
