small fixes & moved background to appComponent

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
     <div class="navigationRight" *ngIf="this.authService.loggedIn">
         <a id="devices-link" routerLink="/devices" routerLinkActive="active">Geräte</a>
         <a id="location-link" routerLink="/locations" routerLinkActive="active">Geschäftsstellen</a>
-        <a id="user-link" routerLink="/users" routerLinkActive="active">Benutzer</a>
+        <a id="persons-link" routerLink="/persons" routerLinkActive="active">Personen</a>
         <a id="logout-link" (click)="logout()">Abmelden</a>
     </div>
 
