--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -1,15 +1,14 @@
-<div class="background">
-    <div class="login-wrapper" (keydown.enter)="prepareLogin()">
-        <div class="flex-item" id="top-text"> <span>Anmeldung</span> </div>
+<div class="login-wrapper" (keydown.enter)="prepareLogin()">
+    <div class="flex-item" id="top-text"> <span>Anmeldung</span> </div>
 
-        <div class="flex-item"> <label for="userName">Benutzername</label> </div>
-        <div class="flex-item"> <input type="text" id="userName" [(ngModel)]="loginData.userName"> </div>
+    <div class="flex-item"> <label for="userName">Benutzername</label> </div>
+    <div class="flex-item"> <input type="text" id="userName" [(ngModel)]="loginData.userName"> </div>
 
-        <div class="flex-item"> <label for="passWord">Passwort</label> </div>
-        <div class="flex-item"> <input type="password" id="passWord" [(ngModel)]="loginData.passWord"> </div>
+    <div class="flex-item"> <label for="passWord">Passwort</label> </div>
+    <div class="flex-item"> <input type="password" id="passWord" [(ngModel)]="loginData.passWord"> </div>
 
-        <div class="flex-itemHalf actionButtons"> <button class="loginAsGuestButton" (click)="prepareLogin(true)">Gast Anmeldung</button> </div>
-        <div class="flex-itemHalf actionButtons"> <button class="loginButton" (click)="prepareLogin()">Anmelden</button> </div>
-
+    <div class="flex-itemHalf actionButtons"> <button class="loginAsGuestButton" (click)="prepareLogin(true)">Gast
+            Anmeldung</button> </div>
+    <div class="flex-itemHalf actionButtons"> <button class="loginButton" (click)="prepareLogin()">Anmelden</button>
     </div>
 </div>
