--- a/src/styles.scss
+++ b/src/styles.scss
@@ -70,10 +70,284 @@ input:focus {
     box-shadow: 0 0 5px #7e9dac inset;
 }
 
-button {
+.filterInput {
     outline: none;
+    margin: 0 20px 0 0;
+    height: 45px;
+    width: 70%;
+    font-size: 16pt;
 }
 
-button:focus {
+button,
+.button {
+    height: 50px;
+    width: 165px;
+    font-size: 20px;
+    text-decoration: none;
+    line-height: 50px;
+    text-align: center;
+    border-radius: 3px;
+    color: black;
     outline: none;
+    border: none;
+    box-shadow: none;
+    transition: box-shadow 0.5s, background-color 0.5s, color 0.5s;
+}
+
+button:hover {
+    outline: none;
+    transition: box-shadow 0.5s, background-color 0.5s, color 0.1s;
+}
+
+button.active {
+    outline: none;
+    transition: box-shadow 0.5s, background-color 0.5s, color 0.1s;
+}
+
+.createNewButton {
+    background-color: #679bb3;
+}
+.createNewButton:hover {
+    background-color: #588397;
+    box-shadow: -0px -0px 50px #679bb3 inset;
+}
+
+.cancelButton {
+    background-color: hsl(0, 0%, 73%);
+}
+.cancelButton:hover {
+    background-color: hsl(0, 0%, 62%);
+    box-shadow: -0px -0px 50px hsl(0, 0%, 83%) inset;
+}
+
+#cancelButton {
+    margin: 0 auto 0 20px;
+}
+
+.deleteButton {
+    background-color: #f28260;
+}
+.deleteButton:hover {
+    background-color: #ca6d51;
+    box-shadow: -0px -0px 50px #ff8864 inset;
+}
+
+#deleteButton {
+    margin: 0 20px 0 auto;
+}
+
+.saveButton {
+    background-color: #7be9d6;
+}
+.saveButton:hover {
+    background-color: #61b8a9;
+    box-shadow: -0px -0px 50px #87ffeb inset;
+}
+
+#saveButton {
+    margin: 0 20px 0 20px;
+}
+
+.contentWrapper {
+    padding: 40px;
+    background-color: #636e74;
+
+    height: calc(85vh - 70px);
+    width: 1000px;
+    max-width: 90vw;
+
+    border-radius: 3px;
+
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-wrap: wrap;
+}
+
+.filterWrapper {
+    width: 80%;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.scrollWrapper {
+    overflow-y: scroll;
+    overflow-x: hidden;
+    height: calc(80vh - 70px);
+    padding-right: 15px;
+}
+
+.scrollWrapper::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px #636e74;
+    -webkit-box-shadow: inset 0 0 6px #636e74;
+    border-radius: 4px;
+    background-color: #636e74;
+}
+
+.scrollWrapper::-webkit-scrollbar {
+    width: 12px;
+    background-color: #636e74;
+}
+
+.scrollWrapper::-webkit-scrollbar-thumb {
+    box-shadow: inset 0 0 6px #5a6f79;
+    -webkit-box-shadow: inset 0 0 6px #5a6f79;
+    border-radius: 4px;
+    background-color: #81a6b8;
+}
+
+.collapsibleToggle {
+    display: none;
+}
+
+.collapsibleWrapper {
+    margin: 1.2rem 0;
+}
+
+.collapsibleLabel {
+    padding: 1rem;
+    display: block;
+    overflow: hidden;
+    cursor: pointer;
+    border-radius: 3px;
+    background-color: #4f7181;
+    box-shadow: 0px 0px 35px #7aaac1 inset;
+    font-weight: bold;
+    font-family: monospace;
+    font-size: 1.2rem;
+    text-align: center;
+    color: #ddd;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    transition: all 0.25s ease-out;
+}
+
+.collapsibleLabel:hover {
+    color: #fff;
+}
+
+.collapsibleLabel::before {
+    content: " ";
+    display: inline-block;
+    border-top: 5px solid transparent;
+    border-bottom: 5px solid transparent;
+    border-left: 5px solid currentColor;
+    vertical-align: middle;
+    margin-right: 0.7rem;
+    transform: translateY(-2px);
+    transition: transform 0.2s ease-out;
+}
+
+.collapsibleToggle:checked + .collapsibleLabel::before {
+    transform: rotate(90deg) translateX(-3px);
+}
+
+.collapsibleToggle:checked + .collapsibleLabel + .collapsibleContent {
+    max-height: 620px;
+    transition: max-height 0.5s;
+}
+
+.collapsibleToggle:checked + .collapsibleLabel {
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
+.collapsibleContent {
+    max-height: 5px;
+    overflow: hidden;
+    transition: max-height 0.5s;
+
+    background-color: $info-100;
+    border-bottom: 1px solid $info-400;
+    border-bottom-left-radius: 7px;
+    border-bottom-right-radius: 7px;
+}
+
+.contentTitle {
+    font-size: 18pt;
+    border-bottom: 1px solid black;
+    padding: 10px 0;
+    margin: 5px 10%;
+    text-align: center;
+}
+
+.contentBody {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 0.5rem 1rem;
+}
+
+.contentBody div {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+
+    width: 100%;
+}
+
+.contentBody div label {
+    margin: 5px;
+    padding: 0 5px;
+    height: 40px;
+    width: 230px;
+    font-size: 15pt;
+    line-height: 40px;
+}
+
+.contentBody div input {
+    outline: none;
+    margin: 5px;
+    height: 40px;
+    width: calc(100% - 230px);
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.7);
+    transition: opacity 500ms;
+    visibility: hidden;
+    opacity: 0;
+}
+
+.overlay:target {
+    visibility: visible;
+    opacity: 1;
+}
+
+.popup {
+    margin: 70px auto;
+    padding: 20px;
+    background: #fff;
+    border-radius: 5px;
+    width: 50%;
+    position: relative;
+    transition: all 5s ease-in-out;
+}
+
+.popup h2 {
+    margin-top: 0;
+    color: #333;
+    font-family: Tahoma, Arial, sans-serif;
+}
+
+.popup .content {
+    max-height: 30%;
+    overflow: auto;
+}
+
+#cancelButtonPOPUP {
+    margin: 0 auto 0 20px;
+}
+
+#saveButtonPOPUP {
+    margin: 0 20px 0 auto;
 }
